external-crates/move/crates/move-compiler/tests/move_check/typing/uninferred_type_pack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_pack.move:5:9
  │
5 │         S{};
  │         ^^^ Could not infer this type. Try adding an annotation
